frontend/test/should_fail/param_014.grg
rule ruleWithUnknownNodeParameterType(n:UnknownNodeType<Node>) {
	modify {
	}
}

test testWithUnknownNodeParameterType(n:UnknownNodeType<Node>) { }

rule ruleWithUnknownEdgeParameterType(-e:UnknownEdgeType<Edge>->) {
	modify {
	}
}

test testWithUnknownEdgeParameterType(-n:UnknownEdgeType<Edge>->) { }
